[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "regex-playground"
version = "0.1.0"
authors = [{ name = "Josh Duncan", email = "joshbduncan@gmail.com" }]
description = "Learn, Build, & Test Python Flavored RegEx."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["regex", "utility", "tui"]
license = { text = "MIT License" }
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["rich==13.6.0", "textual==0.40.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
regex-playground = "regex_playground.cli:main"

# TOOL CONFIGURATION

[tool.pytest.ini_options]
addopts = "--cov=regex_playground"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/regex_playground/__main__.py"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.ruff]
exclude = [".venv"]
select = ["I001"]
extend-select = ["C4", "I", "SIM", "TCH", "UP"]

src = ["src", "test"]
show-fixes = true
output-format = "grouped"
line-length = 88

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-local-folder = ["src"]
