[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "regex-playground"
version = "0.1.0"
authors = [{ name = "Josh Duncan", email = "joshbduncan@gmail.com" }]
description = "Learn, Build, & Test Python Flavored RegEx."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["regex", "utility", "tui"]
license = { text = "MIT License" }
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["rich==13.6.0", "textual==0.40.0"]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "textual-dev",
]
build = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
regex-playground = "regex_playground.cli:main"

# TOOL CONFIGURATION

[tool.coverage.run]
omit = ["src/regex_playground/__main__.py"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
addopts = "--cov=regex_playground"
testpaths = ["tests"]
